@@ -23,6 +23,15 @@ from poorwsgi.request import uni
 
 from poorwsgi.results import redirect, SERVER_RETURN, send_file
 
-from poorwsgi.state import __author__, __date__, __version__
+from poorwsgi.wsgi import Application
 
-from poorwsgi.wsgi import application, app
+
+__author__ = "Ondrej Tuma (McBig) <mcbig@zeropage.cz>"
+__date__ = "11 Nov 2015"
+__version__ = "1.6.0dev17"     # https://www.python.org/dev/peps/pep-0386/
+
+# application callable instance, which is need by wsgi server
+application = Application('__poorwsgi__')
+
+# short reference to application instance, which is need by wsgi server
+app = application
