@@ -1,7 +1,4 @@
 """Constants like http status code, log levels and method types."""
-__author__ = "Ondrej Tuma (McBig) <mcbig@zeropage.cz>"
-__date__ = "17 Aug 2015"
-__version__ = "1.6.0-devel"
 
 OK = 0
 DONE = 1
