@@ -20,6 +20,8 @@
     * remove deprecated Request.add_common_vars
     * remove deprecated request.SERVER_RETURN
     * Application name property
+    * __author__, __date__, __version__, application and app are in poorwsgi
+     (__init__.py) now
 
 ==== 1.5.1 ====
     * append missing cmp function when python3 is use
